# FCG-Trabalho-Final

./: .gitignore  CMakeLists.txt  README.md
data/: ball.mtl  ball_frame_canvas.mtl  ball_puzzle.mtl  crate_frame.mtl  crate_frame_canvas.mtl  door.mtl  garden_gnome_2k.mtl  gnome_frame_canvas.mtl  lantern_chandelier_01_1k.mtl  lock_body.mtl  lock_ring.mtl  marble_bust_01_1k.mtl  modern_arm_chair_01_1k.blend  modern_arm_chair_01_1k.mtl  one_canvas.mtl  parquet.mtl  platform.mtl  stone_wall.mtl  texto_vitoria.mtl  wood_ceiling.mtl  wooden_crate_02_4k.mtl
include/: animation.h  camera.h  collisions.h  gameobject.h  globals.h  labfunctions.h  labincludes.h  labstructures.h  light_source.h  material.h  matrices.h  puzzle.h  room.h  texture.h  tile.h
src/: animation.cpp  camera.cpp  collisions.cpp  gameobject.cpp  globals.cpp  labfunctions.cpp  labstructures.cpp  light_source.cpp  main.cpp  material.cpp  matrices.cpp  puzzle.cpp  room.cpp  shader_fragment.glsl  shader_vertex.glsl  texture.cpp  tile.cpp
